lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:19: error: type mismatch;
 found   : Double
 required: Int
		if (estSolPlat(i)) {a=i;b=getSol()(i).y}
                                                      ^Lander:18: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
	while (a==0 && i<=1949) {
        ^